--- a/bluecadet_gcse.info.yml
+++ b/bluecadet_gcse.info.yml
@@ -2,8 +2,8 @@ type: module
 name: Bluecadet's Google Custom Search Engine
 description: 'Adds searching through Google Custom Search Engine.'
 package: Bluecadet
-version: '8.x-2.0.0'
+version: '2.0.0'
 
-core_version_requirement: ^9
+core_version_requirement: ^9 || ^10
 
 configure: gcse.search_settings
