Update info file format

--- a/bluecadet_gcse.info.yml
+++ b/bluecadet_gcse.info.yml
@@ -1,10 +1,12 @@
-type: module
 name: Bluecadet's Google Custom Search Engine
+type: module
 description: 'Adds searching through Google Custom Search Engine.'
-package: Bluecadet
-version: '2.0.0'
-
 core_version_requirement: ^9 || ^10
 
+package: Bluecadet
+
+dependencies: []
+
 configure: gcse.search_settings
-project: bluecadet_gcse
+
+
