Add in node related dev build tools

--- a/bluecadet_gcse.libraries.yml
+++ b/bluecadet_gcse.libraries.yml
@@ -1,6 +1,6 @@
 gcse:
   version: 1.x
   js:
-    js/bluecadet_gcse.js: {}
+    assets/dist/js/bluecadet_gcse.js: {}
   dependencies:
     - core/drupalSettings
