update package constraint for @bluecadet/drops

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "homepage": "https://github.com/bluecadet/bluecadet_gse#readme",
   "dependencies": {
     "@bluecadet/bldr": "^1.0.6",
-    "@bluecadet/drops": "^1.0.0-alpha.1"
+    "@bluecadet/drops": "^1.0.0"
   },
   "devDependencies": {
     "concurrently": "^7.6.0",
